tests/parser/define-instance.3.bad.error
error: Malformed method definition
  --> test:5:3
   |
 4 |  (define-instance (C :a)
   |                   ------ when parsing instance
 5 |    (f x y))
   |     ^ expected method definition
