tests/parser/define-instance.3.bad.coalton
;; BAD: Parse Instance
(package test-package)

(define-instance (C :a)
  (f x y))
